# finitevolX

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  Makefile  README.md  environment.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json
.github/: copilot-instructions.md  labeler.yml
.github/instructions/: code-review.instructions.md  python-coding.instructions.md
.github/issue-templates/: 01-grad-perp.md  02-divergence.md  03-multilayer-coupling.md  04-stencil-flux.md  05-slip-bc.md  06-timestepping.md  07-multigrid.md  08-forcing-dissipation.md  09-arakawa-jacobian.md  10-energy-diagnostics.md
.github/workflows/: ci.yml  codeql.yml  create-issues.yml  lint.yml  pages.yml  pre-commit-autoupdate.yml  pytest.yaml  release-please.yml  typecheck.yml
.plans/: issue-112-boundary-conditions.md  issue-115-solvers-linear-algebra.md  issues_reconciled.md  port_from_snippets.md  pr102-mask-dispatch-integration.md  refactor-dedup-3d-operators.md  refactor-extract-raw-stencils.md
CHANGELOG/: index.html
advection/: index.html
api/: index.html
api/advection/: index.html
api/boundary_conditions/: index.html
api/capacitance/: index.html
api/coriolis/: index.html
api/diagnostics/: index.html
api/difference/: index.html
api/diffusion/: index.html
api/divergence/: index.html
api/elliptic/: index.html
api/grids/: index.html
api/interpolation/: index.html
api/iterative/: index.html
api/masks/: index.html
api/momentum/: index.html
api/multigrid/: index.html
api/reconstruction/: index.html
api/reference/: index.html
api/spectral_solvers/: index.html
api/spectral_transforms/: index.html
api/stencils/: index.html
api/time_integration/: index.html
api/vertical_modes/: index.html
api/vorticity/: index.html
boundary_conditions/: index.html
cgrid_discretization/: index.html
difference/: index.html
docs/: advection.md  boundary_conditions.md  cgrid_discretization.md  difference.md  elliptic_solvers.md  elliptic_solvers_usage.md  examples.md  index.md  interpolation.md  masks.md  multigrid_solver.md  multigrid_solver_usage.md  multilayer_vs_3d.md  solver_comparison.md  spatial_operators.md  stencils.md  time_integration.md  time_integration_usage.md
docs/api/: advection.md  boundary_conditions.md  capacitance.md  coriolis.md  diagnostics.md  difference.md  diffusion.md  divergence.md  elliptic.md  grids.md  index.md  interpolation.md  iterative.md  masks.md  momentum.md  multigrid.md  reconstruction.md  reference.md  spectral_solvers.md  spectral_transforms.md  stencils.md  time_integration.md  vertical_modes.md  vorticity.md
docs/javascripts/: mathjax.js
docs/notebooks/: advection_1d_schemes.py  advection_2d_masked.py  advection_2d_rotation.py  demo_masks.py  demo_solvers.py  helmholtz_screening.py  pressure_poisson.py  qg_1p5_layer.py  shallow_water.py  streamfunction_inversion.py  swm_linear.py
elliptic_solvers/: index.html
elliptic_solvers_usage/: index.html
examples/: index.html
finitevolx/: AGENTS.md  __init__.py  functional.py
finitevolx/_src/: advection.py  bc_1d.py  bc_set.py  boundary.py  constants.py  difference.py  diffusion.py  divergence.py  elliptic.py  flux.py  grid.py  interpolation.py  jacobian.py  momentum.py  multilayer.py  reconstruction.py  spectral_transforms.py  vertical_modes.py  vorticity.py
finitevolx/_src/advection/: advection.py  face_flux.py  flux.py  linear.py  reconstruct_fn.py  reconstruction.py  weno.py
finitevolx/_src/boundary/: bc_field.py  bc_set.py  boundary.py
finitevolx/_src/diffusion/: diffusion.py  momentum.py
finitevolx/_src/domain/: domain.py  utils.py
finitevolx/_src/field/: continuous.py  field.py  test_field.py  utils.py
finitevolx/_src/grid/: __init__.py  base.py  cartesian.py  cgrid_mask.py  cylindrical.py  grid.py  spherical.py  spherical_grid.py
finitevolx/_src/interp/: interp.py  test_interp.py
interpolation/: index.html
masks/: index.html
multigrid_solver/: index.html
multigrid_solver_usage/: index.html
multilayer_vs_3d/: index.html
notebooks/: arakawa_cgrid.ipynb  demo_masks.ipynb  demo_masks.py  demo_solvers.py  helmholtz_screening.py  interpolation.ipynb  linear_swm.ipynb  pressure_poisson.py  qg_1p5_layer.py  shallow_water.py  streamfunction_inversion.py  swm_linear.py
notebooks/advection_1d_schemes/: index.html
notebooks/advection_2d_masked/: index.html
notebooks/advection_2d_rotation/: index.html
notebooks/demo_masks/: index.html
notebooks/demo_solvers/: index.html
notebooks/helmholtz_screening/: index.html
notebooks/pressure_poisson/: index.html
notebooks/qg_1p5_layer/: index.html
notebooks/shallow_water/: index.html
notebooks/streamfunction_inversion/: index.html
notebooks/swm_linear/: index.html
scripts/: generate_solver_figures.py  qg_1p5_layer.py  shallow_water.py  swm.py  swm_.py  swm_linear.py
search/: search_index.json
solver_comparison/: index.html
spatial_operators/: index.html
stencils/: index.html
tests/: test_advection.py  test_advection_masks.py  test_boundary.py  test_boundary_helpers.py  test_cgrid_mask.py  test_convenience.py  test_convergence.py  test_coriolis.py  test_coriolis_masks.py  test_diagnostics.py  test_difference.py  test_difference_masks.py  test_diffrax_solvers.py  test_diffusion.py  test_diffusion_masks.py  test_diffusion_momentum_masks.py  test_divergence.py  test_dtype_behavior.py  test_elliptic.py  test_face_flux.py  test_fixture_smoke.py  test_flux.py  test_geographic.py  test_ghost.py  test_grid.py  test_interp.py  test_interp_div_vort_masks.py  test_jacobian.py  test_jax_transforms.py  test_limiters.py  test_momentum.py  test_multigrid.py  test_multilayer.py  test_operators.py  test_postcompute_masks.py  test_reconstruction.py  test_reconstruction_pipeline.py  test_scripts.py  test_semi_lagrangian.py  test_solver_wrappers.py  (+12 more)
tests/fixtures/: README.md  __init__.py  _gen_golden.py  _helpers.py  inputs.py
time_integration/: index.html
time_integration_usage/: index.html
(+230 files in other folders)
