[project]
name = "finitevolx"
version = "0.0.30"
description = "Arakawa C-grid finite volume operators in JAX."
authors = [
    { name = "Juan Emmanuel Johnson", email = "jemanjohnson34@gmail.com" },
    { name = "Takaya Uchida", email = "roxyboy.guppy@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.14"
keywords = ["finite-volume", "arakawa", "jax"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "jax>=0.4.38",
    "jaxlib>=0.4.38",
    "jaxtyping>=0.3.0",
    "beartype>=0.20.0",
    "equinox>=0.11.0",
    "scipy>=1.14.0",
    "lineax>=0.1.0",
    "diffrax>=0.6.0",
]

[project.urls]
Repository = "https://github.com/jejjohnson/finitevolX"

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-pretty>=1.2.0",
    "pytest-xdist>=3.5.0",
    "networkx>=3.3",
    "coverage>=7.6.0",
    "matplotlib>=3.9.0",
    "pillow>=11.0.0",
    "xarray>=2025.1.0",
    "zarr>=3.1.5",
]
dev = [
    "ruff>=0.15.0",
    "pre-commit>=4.0.0",
    "nbstripout>=0.7.1",
    "ty>=0.0.23",
]
examples = [
    "cyclopts>=2.0.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.0",
    "pillow>=11.0.0",
    "numpy>=2.0.0",
    "tqdm>=4.66.0",
    "xarray>=2025.1.0",
    "zarr>=3.1.5",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-jupyter>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "finitevolx[dev,test]",
]

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["finitevolx", "tests"]
xfail_strict = true

[tool.ruff]
fix = false
line-length = 88
target-version = "py312"
exclude = ["docs/", "notebooks/"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "B",      # flake8-bugbear
    "Q",      # flake8-quotes
    "PLE",    # pylint errors
    "PLR",    # pylint refactor
    "PLW",    # pylint warnings
    "PIE",    # misc lints
    "PYI",    # flake8-pyi
    "TID",    # tidy imports
    "ISC",    # implicit string concatenation
    "RUF",    # ruff-specific rules
]
ignore = [
    "E402",     # module level import not at top of file
    "E731",     # do not assign a lambda expression, use a def
    "E501",     # line too long (handled by formatter)
    "S101",     # use of assert
    "F722",     # syntax error in forward annotation
    "E741",     # ambiguous variable name
    "E743",     # ambiguous function name
    "F821",     # undefined name (false positives with jaxtyping)
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLR2004",  # magic value comparison
    "PLR0911",  # too many return statements
    "PLR0912",  # too many branches
    "PLR0913",  # too many arguments
    "PLR0915",  # too many statements
    "ISC001",   # conflicts with formatter
    "UP037",    # jaxtyping shape strings must remain quoted
    "RUF002",   # ambiguous unicode characters in docstrings
    "RUF022",   # __all__ is not sorted (we use logical grouping)
    "RUF046",   # int(round(...)) is intentional
    "PYI061",   # Literal style preference
]
unfixable = ["ERA001", "F841", "T201", "T203"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true

[tool.ty.rules]
unresolved-attribute = "ignore"
invalid-return-type = "ignore"
unresolved-import = "ignore"
invalid-argument-type = "ignore"

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["finitevolx"]

[tool.coverage.xml]
output = "reports/coverage.xml"
